# cutmycode

./: .gitignore  CLAUDE.md  README.md  hello.py  package-lock.json  pyproject.toml
apps/accounts/: forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/comments/: forms.py  models.py  urls.py  views.py
apps/comments/migrations/: 0001_initial.py  0002_alter_comment_snippet_alter_comment_user.py
apps/snippets/: forms.py  models.py  urls.py  views.py
apps/snippets/migrations/: 0001_initial.py  0002_alter_snippet_language.py  0003_alter_snippet_description.py  0004_alter_snippet_options.py  0005_sharedsnippet.py
apps/snippets/templatetags/: highlight.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  prod.py
src/: NOTES.md  settings.py  urls.py
src/application/: dtos.py  security.py
src/data/orm/: admin.py  (+2 more)
src/domain/: constants.py  dtos.py  entities.py  policies.py  types.py  value_objects.py
src/interfaces/: container.py
static/css/: highlight.css  index.html  index2.html  main.css
static/js/: alpine.js
templates/: base.html  dashboard.html  explore.html  profile.html  profile_edit.html  shared_snippet_detail.html  snippet_create.html  snippet_delete.html  snippet_detail.html  snippet_edit.html
templates/cotton/: code_block.html  footer.html  header.html  nav.html  pagination.html  snippet_card.html  snippet_preview_modal.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
(+137 files in other folders)
