[project]
name = "cutmycode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.3",
    "django-cotton>=2.1.2",
    "django-debug-toolbar>=5.2.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.23.0",
    "django-template-partials>=24.4",
]
